--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_launcher_icons: ^0.14.4
   flutter_localization: ^0.3.3
   google_mobile_ads: ^7.0.0
+  flutter_riverpod: ^3.2.0
+  in_app_purchase: ^3.2.3
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -54,6 +57,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  generate: true
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
