--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_riverpod: ^3.2.0
   in_app_purchase: ^3.2.3
   url_launcher: ^6.3.2
+  in_app_purchase_android: ^0.4.0+8
+  shared_preferences: ^2.5.4
 
 dev_dependencies:
   flutter_test:
